p2/confs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:

spec:
  rules:
  - host: "app1.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-service
            port:
              number: 80
  - host: "app2.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app2-service
            port:
              number: 80
  # Burada normalde default backend vardi asagidaki kisimla degistirdim
  #   defaultBackend:
  #    service:
  #      name: app3-service
  #     port:
  #      number: 80
  # digerlerinden farkli olarak burada host yok boylelikle geriye kalan istekler buraya geliyor
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app3-service
            port:
              number: 80
